--- a/angular-simpliKart-admin/src/app/components/auth/login/login.component.html
+++ b/angular-simpliKart-admin/src/app/components/auth/login/login.component.html
@@ -1,1 +1,51 @@
-<p>login works!</p>
+<!-- <p>login works!</p> -->
+
+
+
+<section class="log-in-section section-b-space">
+    <div class="container w-100">
+        <div class="row">
+            <div class="col-xl-5 col-lg-6 m-auto">
+                <!-- <app-alert></app-alert> -->
+                 <div class="log-in-box">
+                    <div class="log-in-title">
+                        <img src="assets/images/simpliKart.png" class="img-fluid logo-img" alt="Logo Image">
+                        <!-- <h4>{{'log_in_your_account' | translate}}</h4> -->
+                         <h4>Enter Your Login Details</h4>
+                    </div>
+                    <div class="input-box">
+                        <form class="row g-4">
+                            <div class="col-12">
+                                <div class="form-floating theme-form-floating log-in-form">
+                                    <input type="email" class="form-control" id="email" formControlName="email" placeholder="{{ 'email_address'  }}" />
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-floating theme-form-floating log-in-form">
+                                    <input type="password" class="form-control" id="password" formControlName="password" placeholder="{{ 'password' }}" />
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="forgot-box">
+                                    <a class="forgot-password">{{ 'forgot_password'}}?</a>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <!-- <app-button [class]="'btn btn-theme w-100 justify-content-center'" [id]="'login_btn'">
+                                   
+                                    {{ 'log_in' }}
+                                </app-button> -->
+                                <button class="login-btn"> {{'Login'}}</button>
+                                <div class="sign-up-box">
+                                    <!-- <h4>{{ 'dont_account' | translate }}</h4> -->
+                                     <h4>{{'Dont have an Account?'}}</h4>
+                                     <a [routerLink]="['/auth/register']">{{ 'sign_Up'}}</a>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                 </div>
+            </div>
+        </div>
+    </div>
+</section>
