--- a/angular-simpliKart-admin/src/app/components/auth/forgot-password/forgot-password.component.html
+++ b/angular-simpliKart-admin/src/app/components/auth/forgot-password/forgot-password.component.html
@@ -1,1 +1,29 @@
-<p>forgot-password works!</p>
+<!-- <p>forgot-password works!</p> -->
+
+
+<div class="main-card">
+    <div class="row">
+        <div class="main-box">
+            <div class="main-title">
+                <img src="assets/images/simpliKart2.png" class="img-fluid logo-img" alt="Logo Image">
+                <h4 style="margin-top: 0px;">Forgot Password</h4>
+            </div>
+            <div class="input-box">
+                <form class="row">
+                    <div class="col-12">
+                        <div class="form-floating theme-form-floating">
+                            <input type="email" class="form-control" id="email" formControlName="email" placeholder="{{ 'email_address'  }}" />
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <!-- <app-button [class]="'btn btn-theme w-100 justify-content-center'" [id]="'login_btn'">
+                           
+                            {{ 'log_in' }}
+                        </app-button> -->
+                        <button class="main-btn"> {{'forgot-Password'}}</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
