--- a/angular-simpliKart-admin/src/app/components/auth/login/login.component.css
+++ b/angular-simpliKart-admin/src/app/components/auth/login/login.component.css
@@ -1,50 +1,35 @@
-body {
+html, body {
+    height: 100%;
     margin: 0;
-    padding: 0;
-    background-color: #f8f8f8; /* off-white background */
-    font-family:  sans-serif;
-    font-size: 16px;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #4a5568
 }
 
-/* Section should take full height */
-.log-in-section {
-    display: flex;
-    align-items: center;
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
-    justify-content: center;
+.main-card {
+    /* margin: 05% 20%; */
+    margin: 10% 10% 10% 35%;
 }
 
-/* Container for the login card */
-.log-in-box {
-    background-color: #ffffff; /* white card */
-    padding: 50px 60px;
+.main-box {
+    width: 40%;
+    background-color: #ffffff; 
+    padding: 03% 10%;
+    /* padding-left: 05%; */
     border-radius: 12px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 400px;
+    max-width: 100%;
 }
 
-/* Center logo and title */
-.log-in-title {
+.main-title {
     text-align: center;
     margin-bottom: 30px;
 }
 
 .logo-img {
     width: 150px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
-/* Input styles */
 .theme-form-floating input {
-    width: 100%;
+    width: 90%;
     padding: 12px 16px;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -55,7 +40,6 @@ body {
     margin-bottom: 20px;
 }
 
-/* Forgot password link */
 .forgot-box {
     text-align: left;
     font-size: 16px;
@@ -64,7 +48,7 @@ body {
 }
 
 .forgot-box a {
-    color: #007bff;
+    color: #ffae00;
     text-decoration: none;
     font-size: 14px;
 }
@@ -73,7 +57,6 @@ body {
     text-decoration: underline;
 }
 
-/* Sign-up box */
 .sign-up-box {
     text-align: center;
     margin-top: 10px;
@@ -87,7 +70,7 @@ body {
 
 .sign-up-box a {
     font-weight: bold;
-    color: #007bff;
+    color: #ffae00;
     text-decoration: none;
 }
 
@@ -96,23 +79,23 @@ body {
 }
 
 
-.login-btn {
-    background-color:#007bff; 
+.main-btn {
+    background-color:#ffae00; 
     color: #fff;
-    padding: 12px 30px;
+    padding: 12px 16px;
     font-size: 16px;
     border: none;
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s ease;
     width: 100%;
-    max-width: 200px;
     margin: 0 auto; 
     display: block;
 }
 
-.login-btn:hover {
+.main-btn:hover {
     background-color: white; 
     color: black;
     border: black 1px solid;
 }
+
