--- a/angular-simpliKart-admin/src/app/components/auth/update-password/update-password.component.html
+++ b/angular-simpliKart-admin/src/app/components/auth/update-password/update-password.component.html
@@ -1,41 +1,68 @@
-<!-- <p>update-password works!</p> -->
 
-<!-- <p>forgot-password works!</p> -->
-
-
-<div class="main-card">
-    <div class="row">
-        <div class="main-box">
-            <div class="main-title">
-                <img src="assets/images/simpliKart2.png" class="img-fluid logo-img" alt="Logo Image">
-                <h4 style="margin-top: 0px;">Update Password</h4>
-            </div>
-            <div class="input-box">
-                <form class="row">
-                    <div class="col-12">
-                        <div class="form-floating theme-form-floating">
-                            <input type="email" class="form-control" id="email" formControlName="email" placeholder="{{ 'email_address'  }}" />
+<section class="log-in-section section-b-space">
+    <div class="container w-100">
+       <div class="row">
+          <div class="col-xl-5 col-lg-6 m-auto">
+             <!-- <app-alert></app-alert> -->
+             <div class="log-in-box">
+                <div class="log-in-title">
+                   <img src="assets\images\simpliKart.png" class="img-fluid logo-img" alt="">
+                   <!-- <h4>{{ 'log_in_your_account' | translate }}</h4> -->
+                   <h4>{{ 'update_password'}} </h4>
+                </div>
+                <div class="input-box">
+                   <!-- <form class="row g-4" [formGroup]="form" (ngSubmit)="submit();"> -->
+                    <form class="row g-4">
+                      <div class="col-12">
+                         <div class="form-floating theme-form-floating log-in-form">
+                            <input type="password" class="form-control" id="password" formControlName="password" placeholder="{{ 'password'  }}" />
+                            <!-- <label for="password">{{ 'password' | translate }}</label> -->
+                            <label for="password">{{ 'password' }}</label>
+                            <!-- @if(form.controls['password'].touched && form.controls['password'].errors?.['required']){
+                               <div class="invalid-feedback">
+                                  {{ 'password_is_required' | translate }}
+                               </div>
+                            } -->
+                         </div>
+                      </div>
+                      <div class="col-12">
+                        <div class="form-floating theme-form-floating log-in-form">
+                           <input type="password" class="form-control" id="newpassword" formControlName="newpassword" placeholder="{{ 'newpassword'  }}" />
+                           <!-- <label for="password">{{ 'password' | translate }}</label> -->
+                           <label for="newpassword">{{ 'newpassword' }}</label>
+                           <!-- @if(form.controls['password'].touched && form.controls['password'].errors?.['required']){
+                              <div class="invalid-feedback">
+                                 {{ 'password_is_required' | translate }}
+                              </div>
+                           } -->
                         </div>
-                    </div>
-                    <div class="col-12">
-                        <div class="form-floating theme-form-floating">
-                            <input type="email" class="form-control" id="newemail" formControlName="newemail" placeholder="{{ 'new email_address'  }}" />
+                     </div>
+                     <div class="col-12">
+                        <div class="form-floating theme-form-floating log-in-form">
+                           <input type="password" class="form-control" id="confnewpassword" formControlName="confnewpassword" placeholder="{{ 'confnewpassword'  }}" />
+                           <!-- <label for="password">{{ 'password' | translate }}</label> -->
+                           <label for="confnewpassword">{{ 'confnewpassword' }}</label>
+                           <!-- @if(form.controls['password'].touched && form.controls['password'].errors?.['required']){
+                              <div class="invalid-feedback">
+                                 {{ 'password_is_required' | translate }}
+                              </div>
+                           } -->
                         </div>
-                    </div>
-                    <div class="col-12">
-                        <div class="form-floating theme-form-floating">
-                            <input type="email" class="form-control" id="confnewemail" formControlName="confnewemail" placeholder="{{ 'conf new email_address'  }}" />
+                     </div>
+                      <div class="col-12">
+                         <!-- <app-button [class]="'btn btn-theme w-100 justify-content-center'" [id]="'login_btn'">
+                            {{ 'log_in' | translate }}
+                         </app-button>
+                         <div class="sign-up-box">
+                            <h4>{{ 'dont_account' | translate }}</h4>
+                            <a [routerLink]="['/auth/register']">{{ 'sign_up' |translate}}</a>
+                         </div> -->
+                         <button class="log-in-btn btn btn-theme w-100 justify-content-center">{{ 'submit' }}</button>
                         </div>
-                    </div>
-                    <div class="col-12">
-                        <!-- <app-button [class]="'btn btn-theme w-100 justify-content-center'" [id]="'login_btn'">
-                           
-                            {{ 'log_in' }}
-                        </app-button> -->
-                        <button class="main-btn"> {{'Update-Password'}}</button>
-                    </div>
-                </form>
-            </div>
-        </div>
+                   </form>
+                </div>
+             </div>
+          </div>
+       </div>
     </div>
-</div>
+ </section>
