--- a/angular-simpliKart-admin/src/app/components/auth/login/login.component.css
+++ b/angular-simpliKart-admin/src/app/components/auth/login/login.component.css
@@ -3,29 +3,20 @@ html, body {
     margin: 0;
 }
 
-.main-card {
-    /* margin: 05% 20%; */
+.log-in-card {
     margin: 10% 10% 10% 35%;
 }
 
-.main-box {
-    width: 40%;
+.log-in-box {
+    margin: 5% 40% 0% 35%;
     background-color: #ffffff; 
-    padding: 03% 10%;
-    /* padding-left: 05%; */
-    border-radius: 12px;
+    padding: 03% 2%;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-    max-width: 100%;
-}
+   }
 
-.main-title {
+.log-in-title {
     text-align: center;
     margin-bottom: 30px;
-}
-
-.logo-img {
-    width: 150px;
-    margin-bottom: 5px;
 }
 
 .theme-form-floating input {
@@ -79,7 +70,7 @@ html, body {
 }
 
 
-.main-btn {
+.log-in-btn {
     background-color:#ffae00; 
     color: #fff;
     padding: 12px 16px;
@@ -93,7 +84,7 @@ html, body {
     display: block;
 }
 
-.main-btn:hover {
+.log-in-btn:hover {
     background-color: white; 
     color: black;
     border: black 1px solid;
