--- a/angular-simpliKart-admin/src/app/components/auth/register/register.component.css
+++ b/angular-simpliKart-admin/src/app/components/auth/register/register.component.css
@@ -1,101 +1,127 @@
 html, body {
-    height: 100%;
-    margin: 0;
+  height: 100%;
+  margin: 0;
 }
 
-.main-card {
-    /* margin: 05% 20%; */
-    margin: 10% 10% 10% 35%;
+.log-in-card {
+  margin: 10% 10% 10% 35%;
 }
 
-.main-box {
-    width: 40%;
-    background-color: #ffffff; 
-    padding: 03% 10%;
-    /* padding-left: 05%; */
-    border-radius: 12px;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-    max-width: 100%;
-}
+/* .log-in-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh; 
+  padding: 2rem 1rem;
+  background-color: #f8f9fa; 
+} */
 
-.main-title {
-    text-align: center;
-    margin-bottom: 30px;
-}
+.log-in-box {
+  margin: 5% 25% 0% 20%;
+  background-color: #ffffff; 
+  padding: 03% 2%;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+  border-radius: 1rem;
+  /* width: 100%; */
+ }
 
-.logo-img {
-    width: 150px;
-    margin-bottom: 5px;
-}
-
-.theme-form-floating input {
-    width: 90%;
-    padding: 12px 16px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    font-size: 16px;
+ .input-box .row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem 0;
 }
 
 .theme-form-floating {
-    margin-bottom: 20px;
+  position: relative;
 }
 
+.log-in-title {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.theme-form-floating input,
+.theme-form-floating textarea {
+  padding: 1rem;
+}
+
+/* .theme-form-floating input {
+  width: 90%;
+  padding: 12px 16px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 16px;
+}
+
+.theme-form-floating {
+  margin-bottom: 20px;
+} */
+
+@media (min-width: 576px) {
+  .input-box .col-sm-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
+
 .forgot-box {
-    text-align: left;
-    font-size: 16px;
-    margin-top: -5px;
-    margin-bottom: 20px;
+  text-align: left;
+  font-size: 16px;
+  margin-top: -5px;
+  margin-bottom: 20px;
 }
 
 .forgot-box a {
-    color: #ffae00;
-    text-decoration: none;
-    font-size: 14px;
+  color: #ffae00;
+  text-decoration: none;
+  font-size: 14px;
 }
 
 .forgot-box a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .sign-up-box {
-    text-align: center;
-    margin-top: 10px;
+  text-align: center;
+  margin-top: 10px;
 }
 
 .sign-up-box h4 {
-    font-size: 14px;
-    color: #666;
-    margin-bottom: 8px;
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 8px;
 }
 
 .sign-up-box a {
-    font-weight: bold;
-    color: #ffae00;
-    text-decoration: none;
+  font-weight: bold;
+  color: #ffae00;
+  text-decoration: none;
 }
 
 .sign-up-box a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 
-.main-btn {
-    background-color:#ffae00; 
-    color: #fff;
-    padding: 12px 16px;
-    font-size: 16px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    width: 100%;
-    margin: 0 auto; 
-    display: block;
+.log-in-btn {
+  background-color:#ffae00; 
+  color: #fff;
+  padding: 12px 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 100%;
+  margin: 0 auto; 
+  display: block;
 }
 
-.main-btn:hover {
-    background-color: white; 
-    color: black;
-    border: black 1px solid;
+.log-in-btn:hover {
+  background-color: white; 
+  color: black;
+  border: black 1px solid;
 }
 
