--- a/angular-simpliKart-admin/src/app/components/auth/login/login.component.html
+++ b/angular-simpliKart-admin/src/app/components/auth/login/login.component.html
@@ -7,8 +7,8 @@
              <div class="log-in-box">
                 <div class="log-in-title">
                    <img src="assets\images\simpliKart.png" class="img-fluid logo-img" alt="">
-                   <!-- <h4>{{ 'log_in_your_account' | translate }}</h4> -->
-                   <h4>{{ 'log_in_your_account'}} </h4>
+                   <h4>{{ 'log_in_your_account' | translate }}</h4>
+                   <!-- <h4>{{ 'log_in_your_account' | translate}} </h4> -->
                 </div>
                 <div class="input-box">
                    <!-- <form class="row g-4" [formGroup]="form" (ngSubmit)="submit();"> -->
