--- a/angular-simpliKart-admin/src/app/components/auth/forgot-password/forgot-password.component.html
+++ b/angular-simpliKart-admin/src/app/components/auth/forgot-password/forgot-password.component.html
@@ -1,44 +1,40 @@
+<div class="container w-100">
+   <!-- <div class="card" style="visibility: hidden;"> 
+   </div> -->
 
-<section class="log-in-section section-b-space">
-    <div class="container w-100">
-       <div class="row">
-          <div class="col-xl-5 col-lg-6 m-auto">
-             <!-- <app-alert></app-alert> -->
-             <div class="log-in-box">
-                <div class="log-in-title">
-                   <img src="assets\images\simpliKart.png" class="img-fluid logo-img" alt="">
-                   <!-- <h4>{{ 'log_in_your_account' | translate }}</h4> -->
-                   <h4>{{ 'forgot_password'}} </h4>
-                </div>
-                <div class="input-box">
-                   <!-- <form class="row g-4" [formGroup]="form" (ngSubmit)="submit();"> -->
-                    <form class="row g-4">
-                      <div class="col-12">
-                         <div class="form-floating theme-form-floating log-in-form">
-                            <input type="email" class="form-control" id="email" formControlName="email" placeholder="{{ 'email'  }}" />
-                            <!-- <label for="password">{{ 'password' | translate }}</label> -->
-                            <label for="email">{{ 'email' }}</label>
-                            <!-- @if(form.controls['password'].touched && form.controls['password'].errors?.['required']){
-                               <div class="invalid-feedback">
-                                  {{ 'password_is_required' | translate }}
-                               </div>
-                            } -->
-                         </div>
-                      </div>
-                      <div class="col-12">
-                         <!-- <app-button [class]="'btn btn-theme w-100 justify-content-center'" [id]="'login_btn'">
-                            {{ 'log_in' | translate }}
-                         </app-button>
-                         <div class="sign-up-box">
-                            <h4>{{ 'dont_account' | translate }}</h4>
-                            <a [routerLink]="['/auth/register']">{{ 'sign_up' |translate}}</a>
-                         </div> -->
-                         <button class="log-in-btn btn btn-theme w-100 justify-content-center">{{ 'submit' }}</button>
+   <div class="card">
+      <!-- <app-alert></app-alert> -->
+         <div class="log-in-title">
+            <img src="assets\images\simpliKart.png" class="img-fluid logo-img" alt="">
+            <h4>{{ 'forgot_password' | translate  }}</h4>
+         </div>
+         <div class="input-box">
+             <form class="row g-4" [formGroup]="form" (ngSubmit)="onSubmitForm();">
+               <div class="col-12">
+                  <div class="form-floating theme-form-floating log-in-form">
+                     <input type="text" class="form-control" id="email"  placeholder="{{ 'email_address' | translate}}" />
+                     <!-- @if(form.controls['email'].touched && form.controls['email'].errors?.['required']){
+                        <div class="invalid-feedback">
+                           {{ 'email_is_required' | translate }}
                         </div>
-                   </form>
-                </div>
-             </div>
-          </div>
-       </div>
-    </div>
- </section>
+                     }
+
+                     @if(form.controls['email'].touched && form.controls['email'].errors?.['email']){
+                        <div class="invalid-feedback">
+                           {{ 'invalid_email' | translate }}
+                        </div>
+                     } -->
+                  </div>
+               </div>
+               <div class="col-12">
+                  <!-- <app-button [class]="'btn btn-theme w-100 justify-content-center'" [id]="'login_btn'">
+                     {{ 'log_in' | translate }}
+                  </app-button> -->
+                  <button class="log-in-btn w-100 justify-content-center">{{'submit' | translate}}</button>
+               </div>
+            </form>
+         </div>
+
+
+   </div>
+ </div>
