--- a/angular-simpliKart-admin/src/app/components/auth/otp/otp.component.css
+++ b/angular-simpliKart-admin/src/app/components/auth/otp/otp.component.css
@@ -1,12 +1,49 @@
-html, body {
-    height: 100%;
+* {
     margin: 0;
-}
+    padding: 0;
+    box-sizing: border-box;
+  }
 
-.log-in-card {
-    margin: 10% 10% 10% 35%;
-}
+  body, html {
+    height: 100%;
+    font-family: Arial, sans-serif;
+  }
 
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding-top: 5vh; 
+    background-color: #f2f2f2;
+  }
+
+  .container {
+    display: flex;
+    gap: 2rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    padding-top: 10%;
+  }
+
+  .card {
+    background-color: #ffffff;
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    /* flex: 1 1 250px; */
+  }
+
+
+  @media (max-width: 600px) {
+    .container {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  
 .log-in-box {
     margin: 5% 40% 0% 35%;
     background-color: #ffffff; 
@@ -20,7 +57,7 @@ html, body {
 }
 
 .theme-form-floating input {
-    width: 90%;
+    width: 100%;
     padding: 12px 16px;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -68,7 +105,6 @@ html, body {
 .sign-up-box a:hover {
     text-decoration: underline;
 }
-
 
 .log-in-btn {
     background-color:#ffae00; 
