--- a/angular-simpliKart-admin/src/app/components/auth/otp/otp.component.html
+++ b/angular-simpliKart-admin/src/app/components/auth/otp/otp.component.html
@@ -1,30 +1,33 @@
-<section class="log-in-section section-b-space">
-    <div class="container w-100">
-       <div class="row">
-          <div class="col-xl-5 col-lg-6 m-auto">
-             <!-- <app-alert></app-alert> -->
-             <!-- <form [formGroup]="form" (ngSubmit)="submit();"> -->
-                <form>
-                <div class="log-in-box">
-                   <div class="log-in-title">
-                      <img src="assets\images\simpliKart.png" class="img-fluid logo-img" alt="">
-                      <!-- <h3 class="text-content">{{ 'please_enter_the_one_time_password_to_verify_your_account' | translate }}</h3> -->
-                      <h3 class="text-content">{{ 'otp_to_verify_your_account' }}</h3>
-                      <h5 class="text-content">
-                         <!-- {{ 'a_code_has_been_sent_to' | translate }} <span>{{ email }}</span> -->
-                         {{ 'a_code_has_been_sent_to'  }} <span>{{ 'email' }}</span>
-                      </h5>
-                   </div>
-                   <div class="form-floating theme-form-floating log-in-form">
-                    <input type="text" class="form-control" formControlName="otp" maxlength="5" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" onKeyPress="if(this.value.length==5) return false;"  />
-                 </div>
-                   <!-- <app-button [class]="'btn btn-theme w-100 justify-content-center'" [id]="'otp_btn'">
-                      {{ 'validate' | translate }}
-                   </app-button> -->
-                   <button class="log-in-btn btn btn-theme w-100 justify-content-center">{{ 'validate' }}</button>
-                </div>
-             </form>
-          </div>
-       </div>
-    </div>
- </section>
+<div class="container w-100">
+   <!-- <div class="card" style="visibility: hidden;"> 
+   </div> -->
+
+   <div class="card">
+      <!-- <app-alert></app-alert> -->
+         <div class="log-in-title">
+            <img src="assets\images\simpliKart.png" class="img-fluid logo-img" alt="">
+            <h4>{{ 'please_enter_the_one_time_password_to_verify_your_account' | translate  }}</h4>
+            <br>
+            <h5 class="text-content">
+               {{ 'a_code_has_been_sent_to' | translate }} <span>{{ 'email' | translate }}</span>
+            </h5>
+         </div>
+         <div class="input-box">
+             <form class="row g-4" [formGroup]="form" (ngSubmit)="onSubmitForm();">
+               <div class="col-12">
+                  <div class="form-floating theme-form-floating log-in-form">
+                     <input type="number" class="form-control" formControlName="otp" maxlength="5" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" onKeyPress="if(this.value.length==5) return false;"  />
+                  </div>
+               </div>
+               <div class="col-12">
+                  <!-- <app-button [class]="'btn btn-theme w-100 justify-content-center'" [id]="'login_btn'">
+                     {{ 'log_in' | translate }}
+                  </app-button> -->
+                  <button class="log-in-btn w-100 justify-content-center">{{'validate' | translate}}</button>
+               </div>
+            </form>
+         </div>
+
+
+   </div>
+ </div>
