--- a/angular-simpliKart-admin/src/app/components/auth/update-password/update-password.component.html
+++ b/angular-simpliKart-admin/src/app/components/auth/update-password/update-password.component.html
@@ -1,68 +1,64 @@
+<div class="container w-100">
+   <!-- <div class="card" style="visibility: hidden;"> 
+   </div> -->
 
-<section class="log-in-section section-b-space">
-    <div class="container w-100">
-       <div class="row">
-          <div class="col-xl-5 col-lg-6 m-auto">
-             <!-- <app-alert></app-alert> -->
-             <div class="log-in-box">
-                <div class="log-in-title">
-                   <img src="assets\images\simpliKart.png" class="img-fluid logo-img" alt="">
-                   <!-- <h4>{{ 'log_in_your_account' | translate }}</h4> -->
-                   <h4>{{ 'update_password'}} </h4>
-                </div>
-                <div class="input-box">
-                   <!-- <form class="row g-4" [formGroup]="form" (ngSubmit)="submit();"> -->
-                    <form class="row g-4">
-                      <div class="col-12">
-                         <div class="form-floating theme-form-floating log-in-form">
-                            <input type="password" class="form-control" id="password" formControlName="password" placeholder="{{ 'password'  }}" />
-                            <!-- <label for="password">{{ 'password' | translate }}</label> -->
-                            <label for="password">{{ 'password' }}</label>
-                            <!-- @if(form.controls['password'].touched && form.controls['password'].errors?.['required']){
-                               <div class="invalid-feedback">
-                                  {{ 'password_is_required' | translate }}
-                               </div>
-                            } -->
-                         </div>
-                      </div>
-                      <div class="col-12">
-                        <div class="form-floating theme-form-floating log-in-form">
-                           <input type="password" class="form-control" id="newpassword" formControlName="newpassword" placeholder="{{ 'newpassword'  }}" />
-                           <!-- <label for="password">{{ 'password' | translate }}</label> -->
-                           <label for="newpassword">{{ 'newpassword' }}</label>
-                           <!-- @if(form.controls['password'].touched && form.controls['password'].errors?.['required']){
-                              <div class="invalid-feedback">
-                                 {{ 'password_is_required' | translate }}
-                              </div>
-                           } -->
+   <div class="card">
+      <!-- <app-alert></app-alert> -->
+         <div class="log-in-title">
+            <img src="assets\images\simpliKart.png" class="img-fluid logo-img" alt="">
+            <h4>{{ 'update_password' | translate  }}</h4>
+         </div>
+         <div class="input-box">
+             <form class="row g-4" [formGroup]="form" (ngSubmit)="onSubmitForm();">
+               <div class="col-12">
+                  <div class="form-floating theme-form-floating log-in-form">
+                     <input type="password" class="form-control" id="password" formControlName="password" placeholder="{{ 'password' | translate  }}" />
+                     <!-- <label for="password">{{ 'password' | translate }}</label> -->
+                     <!-- @if(form.controls['password'].touched && form.controls['password'].errors?.['required']){
+                        <div class="invalid-feedback">
+                           {{ 'password_is_required' | translate }}
                         </div>
-                     </div>
-                     <div class="col-12">
-                        <div class="form-floating theme-form-floating log-in-form">
-                           <input type="password" class="form-control" id="confnewpassword" formControlName="confnewpassword" placeholder="{{ 'confnewpassword'  }}" />
-                           <!-- <label for="password">{{ 'password' | translate }}</label> -->
-                           <label for="confnewpassword">{{ 'confnewpassword' }}</label>
-                           <!-- @if(form.controls['password'].touched && form.controls['password'].errors?.['required']){
-                              <div class="invalid-feedback">
-                                 {{ 'password_is_required' | translate }}
-                              </div>
-                           } -->
+                     } -->
+                  </div>
+               </div>
+               <div class="col-12">
+                  <div class="form-floating theme-form-floating log-in-form">
+                     <input type="password" class="form-control" id="new_password" formControlName="new_password" placeholder="{{ 'new_password' | translate  }}" />
+                     <!-- <label for="password">{{ 'password' | translate }}</label> -->
+                     <!-- @if(form.controls['password'].touched && form.controls['password'].errors?.['required']){
+                        <div class="invalid-feedback">
+                           {{ 'password_is_required' | translate }}
                         </div>
-                     </div>
-                      <div class="col-12">
-                         <!-- <app-button [class]="'btn btn-theme w-100 justify-content-center'" [id]="'login_btn'">
-                            {{ 'log_in' | translate }}
-                         </app-button>
-                         <div class="sign-up-box">
-                            <h4>{{ 'dont_account' | translate }}</h4>
-                            <a [routerLink]="['/auth/register']">{{ 'sign_up' |translate}}</a>
-                         </div> -->
-                         <button class="log-in-btn btn btn-theme w-100 justify-content-center">{{ 'submit' }}</button>
+                     } -->
+                  </div>
+               </div>
+               <div class="col-12">
+                  <div class="form-floating theme-form-floating log-in-form">
+                     <input type="password" class="form-control" id="enter_confirm_password" formControlName="enter_confirm_password" placeholder="{{ 'enter_confirm_password' | translate  }}" />
+                     <!-- <label for="password">{{ 'password' | translate }}</label> -->
+                     <!-- @if(form.controls['password'].touched && form.controls['password'].errors?.['required']){
+                        <div class="invalid-feedback">
+                           {{ 'password_is_required' | translate }}
                         </div>
-                   </form>
-                </div>
-             </div>
-          </div>
-       </div>
-    </div>
- </section>
+                     } -->
+                  </div>
+               </div>
+               <div class="col-12">
+                  <!-- <app-button [class]="'btn btn-theme w-100 justify-content-center'" [id]="'login_btn'">
+                     {{ 'log_in' | translate }}
+                  </app-button>
+                  <div class="sign-up-box">
+                     <h4>{{ 'dont_account' | translate }}</h4>
+                     <a [routerLink]="['/auth/register']">{{ 'sign_up' |translate}}</a>
+                  </div> -->
+                  <button class="log-in-btn btn btn-theme w-100 justify-content-center">{{ 'submit' | translate }}</button>
+                 </div>
+            </form>
+         </div>
+
+
+   </div>
+ </div>
+
+
+
